# py_template

./: .editorconfig  .env.local  .mypy.ini  .ruff.toml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml  update.py
src/project_name/: __main__.py
tests/: test_app.py  test_imports.py
