[project]
name = "project_name"
version = "0.1.0"
description = "Python Template repo/package"
readme = "README.md"
requires-python = ">=3.10, <3.15"
dependencies = ["pytoml (>=0.1.21,<0.2.0)"]

[[project.authors]]
name = "Frank1o3"
email = "jahdy1o3@gmail.com"

[project.license]
text = "MIT"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["mypy (>=1.19.1,<2.0.0)", "ruff (>=0.14.14,<0.15.0)", "pytest (>=9.0.2,<10.0.0)", "pytest-cov (>=7.0.0,<8.0.0)", "pytest-mock (>=3.15.1,<4.0.0)"]

[tool.poetry.scripts]
app = "project_name.cli:main"

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
testpaths = ["tests"]
